# SolverGenerator

./: .gitignore  CMakeLists.txt  Makefile  README.md  plotter.py  setup.bat  solve.bat  system.txt  system2.txt
src_generator/: expression.cpp  expression.h  generator.cpp  generator.h  main.cpp  parse.cpp  parse.h  tokenize.cpp  tokenize.h
src_modgen/: expression.cpp  parse.h  tokenize.cpp
src_solver/: main.cpp
test/: test.cpp
